raw: mudança na lógica de salvamento do banco de dados

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,8 @@
 spring.application.name=api_marcacao_consultas
 
 # Configuração do H2 Database com o nome 'consultas_db'
-    spring.datasource.url=jdbc:h2:mem:consultas_db
+
+spring.datasource.url=jdbc:h2:file:./data/consultas_db
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=
